--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <title>Amigos del Mundo</title>
   </head>
   <body>Amigos del Mundo</body>
-  <h1>Amigos del Mundo</h1>
-  <p><strong>Amigos del Mundo</strong></p>
-  <h2>Adopta un Amigo</h2>
+ <p><strong>Amigos del Mundo</strong></p>
+  <h1>Dos Amigos a la vez</h1>
+    <h2>Adopta un Amigo</h2>
    </head>
   </body>
 </html>
