--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-  <title>Amigos del Mundo</title>
+  <title>Comunidad Virtual</title>
   </head>
-  <body>Amigos del Mundo</body>
- <p><strong>Amigos del Mundo</strong></p>
-  <h1>Dos Amigos a la vez</h1>
+  <p><strong>Amigos del Mundo</strong></p>
+  <body>Conectamos el Mundo</body>
+   <h1>Dos Amigos a la vez</h1>
     <h2>Adopta un Amigo</h2>
    </head>
   </body>
