--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
   <title>Comunidad Virtual</title>
   </head>
-  <p><strong>Amigos del Mundo</strong></p>
   <body>Conectamos el Mundo</body>
+  <p><strong>Amigos del Mundo</strong></p>
+  <h1>Amigos del Mundo/>
    <h1>Dos Amigos a la vez</h1>
     <h2>Adopta un Amigo</h2>
    </head>
