--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Comunidad Virtual</title>
+  <link href#"main.css rel#"stylesheet />"
   </head>
   <body>Conectamos el Mundo</body>
   <p><strong>Amigos del Mundo</strong></p>
