--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
   <title>Comunidad Virtual</title>
-  <link href#"main.css rel#"stylesheet />"
+  <link href#"main.css" rel#"stylesheet />"
   </head>
   <body>Conectamos el Mundo</body>
   <p><strong>Amigos del Mundo</strong></p>
   <h1>Amigos del Mundo/>
-   <h1>Dos Amigos a la vez</h1>
+   <h2>Dos Amigos a la vez</h2>
     <h2>Adopta un Amigo</h2>
    </head>
   </body>
