--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>Conectamos el Mundo</body>
   <p><strong>Amigos del Mundo</strong></p>
-  <h1>Amigos del Mundo/h1>
+  <h1>Amigos del Mundo</h1>
    <h2>Dos Amigos a la vez</h2>
     <h2>Adopta un Amigo</h2>
    </head>
