--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <html>
 <head>
-  <title>Comunidad Virtual</title>
+	<title> AMIGOS DEL MUNDO</title>
+	<br> 
+	<img src="inicial.png" border="2px"   width="45%" height="45%" alt="Imagen de digital" />
   <link href="main.css" rel="stylesheet" />
-  </head>
-  <body>Conectamos el Mundo</body>
-  <p><strong>Amigos del Mundo</strong></p>
-  <h1>Amigos del Mundo</h1>
-   <h2>Dos Amigos a la vez</h2>
-    <h2>Adopta un Amigo</h2>
-   </head>
-  </body>
+</head>
+
+<body style="background-color:#c6fffa;">
+	<h1 style="color:#00006b">Amigos del Mundo</h1> 
+	
+<h2> Conectamos el mundo. Dos amigos a la vez </h2>
+	<br> 
+	<!
+	<img src="inicial.png" border="2px"   width="65%" height="65%" alt="Imagen de digital" />
+	
+	<br> 
+		<br> 
+		<br> 
+	      Docunmento visión de la comunidad digital:
+			<a href="https://trello.com/b/Gs27Lido/amigos-del-mundo"> pulsa </a>
+			<br> 
+			<br> 
+		Docunmento pdf:
+		 <a href="Tarea5.pdf"> pulsa </a>
+</body>
 </html>
- 
+
