--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 <head>
 	<title> AMIGOS DEL MUNDO</title>
+<head/>
 	<br> 
+<head/>
 	<img src="inicial.png" border="2px"   width="45%" height="45%" alt="Imagen de digital" />
+	  <link href="main.css" rel="stylesheet" />
 </head>
 
 <body style="background-color:#c6fffa;">
